# llama-install.sh

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  PRESETS.md  README.md  REQUIREMENTS.md  artefacts.json  build.cmake  install.ps1  install.sh
.github/workflows/: bench-compare.yml  bench-release.yml  bench.yml  build-any-cpu.yml  build-any-cuda.yml  build-any-metal.yml  build-any-rocm.yml  build-any-vulkan.yml  build-cuda-deps.yml  release.yml  test-release.yml  test-windows.yml
cuda/: CMakeLists.txt  FindCUDAToolkit.cmake  probe.c  prune.cmake  stub.cmake
rocm/: CMakeLists.txt  probe.cc
scripts/: bench-compare.py  bench.py  fetch-artefacts.py  generate-reqs.py  generate.py  install-cuda.py  install-zig.py  update-ci.py  upload.py
toolchains/: base.cmake  cross.cmake  exit.cmake  init.cmake  rocm.cmake  vulkan.cmake  zig.c
vulkan/: CMakeLists.txt  FindSPIRV-Headers.cmake  FindVulkan.cmake  probe.c  stub.c  stub.cmake
win32/: shim.c  shim.cmake
