enable_language(CUDA)
find_package(CUDAToolkit REQUIRED)
add_executable(probe probe.c)
target_compile_definitions(probe PRIVATE "PROBE_ARCH=${LLAMA_INSTALL_PROBE_ARCHS}")
target_link_libraries(probe PRIVATE CUDA::cuda_driver m)
target_link_options(probe PRIVATE -Wl,--no-as-needed)
set_target_properties(probe PROPERTIES OUTPUT_NAME "probe")
