list(APPEND CMAKE_PREFIX_PATH "/opt/rocm/lib/cmake")
find_package(hip REQUIRED)
find_package(hipblas REQUIRED)
find_package(rocblas REQUIRED)
add_executable(probe probe.cc)
target_link_libraries(probe PRIVATE hip::host roc::rocblas roc::hipblas)
set_target_properties(probe PROPERTIES CXX_STANDARD 17 OUTPUT_NAME "probe")
