find_package(Vulkan REQUIRED)
add_executable(probe probe.c)
if(LINUX)
    target_link_libraries(probe PRIVATE Vulkan::Vulkan m)
    target_link_options(probe PRIVATE -Wl,--no-as-needed)
else()
    target_link_libraries(probe PRIVATE Vulkan::Vulkan)
endif()
set_target_properties(probe PROPERTIES OUTPUT_NAME "probe")
